--- a/changelog.txt
+++ b/changelog.txt
@@ -13,3 +13,6 @@ Prochainement:
 
 -Ajout de bouton retour
 -Ajout des chemins/marker pour l'étage 2/3
+-Ajout d'une musique de fond SAO 
+
+Site web toujours en cours de developpement.
