--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,25 @@
-Version 1.2
+Version 1.1:
 
--Palier 1(Monde + Labyrinthe)
+-Palier 1(Monde )
 -Marqueur (a titre indicatif ils seront tous disponible quand le serv ouvrira)
 -Activation/Désactivation de marqueur par ça catégorie
 -Affichage de la description/coordonnées in-game etc (WIP)
+
+Version 1.2:
+
+-Palier 1 (Labyrinthe)
 -Ajout d'un hub + hub Palier1
 -Ajout des 3 etages du Labyrinthe
 -Ajout des chemins (Classique/Forgeron/Optionel) pour l'étage 1
 -Ajout des marker pour l'étage 1
+-Ajout d'un font SAO (police)
+
+
+Version 1.3:
+
+-Ajout d'image de fond
+-Changement des boutons du hub/hub Palier1
+-Suppression du logo + nom de guilde au hub
 
 Prochainement:
 
